--- a/Дым/ru.lproj/Main.storyboard
+++ b/Дым/ru.lproj/Main.storyboard
@@ -767,7 +767,7 @@
                                 <subviews>
                                     <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="atx-fa-DMl" userLabel="darkBackground">
                                         <rect key="frame" x="0.0" y="0.0" width="285" height="210"/>
-                                        <color key="backgroundColor" red="0.96078431369999995" green="0.43921568630000002" blue="0.27450980390000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                 <integer key="value" value="10"/>
@@ -792,43 +792,67 @@
                                             <segue destination="bL8-hi-PJU" kind="show" id="dNB-lP-C4Y"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="-" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="olE-lE-cPb">
-                                        <rect key="frame" x="139" y="64" width="8" height="20"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="olE-lE-cPb">
+                                        <rect key="frame" x="86" y="64" width="114" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="olE-lE-cPb" secondAttribute="height" multiplier="57:10" id="80L-Fb-vmD"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <color key="textColor" red="0.19607843137254902" green="0.95294117647058818" blue="0.96470588235294119" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="-" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="quP-vH-ox6">
-                                        <rect key="frame" x="92" y="120" width="108" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="quP-vH-ox6">
+                                        <rect key="frame" x="86" y="121" width="114" height="27"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="quP-vH-ox6" secondAttribute="height" multiplier="38:9" id="5dr-qH-70w"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                         <color key="textColor" red="0.1960784314" green="0.95294117649999999" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UFB-8h-dn5">
-                                        <rect key="frame" x="74" y="140" width="122" height="27"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="UFB-8h-dn5">
+                                        <rect key="frame" x="86" y="148" width="114" height="27"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="UFB-8h-dn5" secondAttribute="height" multiplier="38:9" id="9mI-3C-BYW"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                         <color key="textColor" red="0.1960784314" green="0.95294117649999999" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h6p-uA-OmX">
-                                        <rect key="frame" x="82" y="100" width="122" height="27"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="h6p-uA-OmX">
+                                        <rect key="frame" x="86" y="94" width="114" height="27"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="h6p-uA-OmX" secondAttribute="height" multiplier="38:9" id="4O8-nP-pK7"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                         <color key="textColor" red="0.1960784314" green="0.95294117649999999" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="h6p-uA-OmX" firstAttribute="width" secondItem="84q-NI-bCr" secondAttribute="height" multiplier="38:47" id="1be-zY-nJw"/>
+                                    <constraint firstItem="quP-vH-ox6" firstAttribute="width" secondItem="84q-NI-bCr" secondAttribute="height" multiplier="38:47" id="2Og-jH-Z43"/>
+                                    <constraint firstItem="h6p-uA-OmX" firstAttribute="top" secondItem="olE-lE-cPb" secondAttribute="bottom" constant="10" id="ARc-Bm-H2M"/>
                                     <constraint firstAttribute="trailing" secondItem="84q-NI-bCr" secondAttribute="trailing" constant="72" id="Ee0-cw-Id7"/>
                                     <constraint firstItem="84q-NI-bCr" firstAttribute="top" secondItem="FEc-QC-5Xw" secondAttribute="bottom" constant="10" id="GMl-TG-wAJ"/>
                                     <constraint firstAttribute="trailing" secondItem="FEc-QC-5Xw" secondAttribute="trailing" constant="5" id="GOO-Kg-Q7f"/>
+                                    <constraint firstItem="quP-vH-ox6" firstAttribute="centerX" secondItem="84q-NI-bCr" secondAttribute="centerX" id="Iu2-de-xRt"/>
+                                    <constraint firstItem="olE-lE-cPb" firstAttribute="top" secondItem="84q-NI-bCr" secondAttribute="top" constant="15" id="L8m-8D-Pr9"/>
                                     <constraint firstItem="84q-NI-bCr" firstAttribute="leading" secondItem="GtK-Tt-sdy" secondAttribute="leading" constant="72" id="OIC-gp-Ih7"/>
                                     <constraint firstAttribute="bottom" secondItem="84q-NI-bCr" secondAttribute="bottom" constant="20" id="SeL-YL-Ile"/>
                                     <constraint firstItem="FEc-QC-5Xw" firstAttribute="leading" secondItem="GtK-Tt-sdy" secondAttribute="leading" constant="5" id="V6F-kl-Aa7"/>
+                                    <constraint firstItem="UFB-8h-dn5" firstAttribute="width" secondItem="84q-NI-bCr" secondAttribute="height" multiplier="38:47" id="XPW-Zc-bhI"/>
+                                    <constraint firstItem="quP-vH-ox6" firstAttribute="top" secondItem="h6p-uA-OmX" secondAttribute="bottom" id="ZK8-7s-DwY"/>
                                     <constraint firstItem="atx-fa-DMl" firstAttribute="leading" secondItem="GtK-Tt-sdy" secondAttribute="leading" id="aCc-Oj-GSV"/>
                                     <constraint firstAttribute="bottom" secondItem="atx-fa-DMl" secondAttribute="bottom" id="aI3-B2-EXd"/>
                                     <constraint firstItem="atx-fa-DMl" firstAttribute="top" secondItem="GtK-Tt-sdy" secondAttribute="top" id="c8g-5c-2Ph"/>
+                                    <constraint firstItem="olE-lE-cPb" firstAttribute="width" secondItem="84q-NI-bCr" secondAttribute="height" multiplier="38:47" id="eli-iP-FnH"/>
                                     <constraint firstAttribute="trailing" secondItem="atx-fa-DMl" secondAttribute="trailing" id="i0r-o7-bnQ"/>
+                                    <constraint firstItem="UFB-8h-dn5" firstAttribute="top" secondItem="quP-vH-ox6" secondAttribute="bottom" id="iDl-y5-eUJ"/>
                                     <constraint firstItem="FEc-QC-5Xw" firstAttribute="top" secondItem="GtK-Tt-sdy" secondAttribute="top" constant="5" id="pla-W5-Uzb"/>
+                                    <constraint firstItem="olE-lE-cPb" firstAttribute="centerX" secondItem="84q-NI-bCr" secondAttribute="centerX" id="sFD-zb-NJU"/>
+                                    <constraint firstItem="h6p-uA-OmX" firstAttribute="centerX" secondItem="84q-NI-bCr" secondAttribute="centerX" id="yRF-Ng-SBE"/>
+                                    <constraint firstItem="UFB-8h-dn5" firstAttribute="centerX" secondItem="84q-NI-bCr" secondAttribute="centerX" id="z2A-sM-Fyt"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3IL-jr-AXZ" userLabel="On the Map Group">
@@ -836,7 +860,7 @@
                                 <subviews>
                                     <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jqg-jn-oml" userLabel="darkBackground">
                                         <rect key="frame" x="0.0" y="0.0" width="285" height="210"/>
-                                        <color key="backgroundColor" red="0.96078431369999995" green="0.43921568630000002" blue="0.27450980390000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                 <integer key="value" value="10"/>
@@ -881,7 +905,7 @@
                                 <subviews>
                                     <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lw9-oH-m8B" userLabel="darkBackground">
                                         <rect key="frame" x="0.0" y="0.0" width="580" height="180"/>
-                                        <color key="backgroundColor" red="0.96078431369999995" green="0.43921568630000002" blue="0.27450980390000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                 <integer key="value" value="10"/>
@@ -986,6 +1010,8 @@
                         <outlet property="mapGroupProportionToSuperview" destination="k4x-sR-382" id="fcQ-eg-vbn"/>
                         <outlet property="scheduleButtonLeading" destination="OIC-gp-Ih7" id="pva-za-z8Q"/>
                         <outlet property="scheduleButtonTrailing" destination="Ee0-cw-Id7" id="NfK-0d-Wsw"/>
+                        <outlet property="scheduleCalendarDayTop" destination="L8m-8D-Pr9" id="hyq-Uo-gRM"/>
+                        <outlet property="scheduleCalendarStartTimeTopToDayBottom" destination="ARc-Bm-H2M" id="s1M-54-aRH"/>
                         <outlet property="scheduleGroupProportionToSuperView" destination="tb9-Zf-DSd" id="UKG-8Z-VOH"/>
                         <outlet property="socialMediaCallButtonLeading" destination="6EG-sl-PTg" id="5Uv-Io-QBJ"/>
                         <outlet property="socialMediaGroupBottomToSuperViewButtonLayout" destination="v7u-Zf-Sps" id="eAK-0D-8nU"/>
