--- a/Дым/ru.lproj/Main.storyboard
+++ b/Дым/ru.lproj/Main.storyboard
@@ -344,7 +344,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1xj-GD-ODW">
-                                        <rect key="frame" x="15" y="2" width="476" height="37"/>
+                                        <rect key="frame" x="8" y="2" width="491" height="37"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="45"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <state key="normal" title="Специальные предложения">
@@ -358,8 +358,9 @@
                                 <constraints>
                                     <constraint firstItem="nfE-l3-357" firstAttribute="top" secondItem="cAq-jU-fkf" secondAttribute="top" constant="12" id="5oc-bb-ljq"/>
                                     <constraint firstItem="v1s-eO-pzn" firstAttribute="bottom" secondItem="nfE-l3-357" secondAttribute="bottom" id="6Ko-av-6y2"/>
+                                    <constraint firstItem="1xj-GD-ODW" firstAttribute="leading" secondItem="Yz4-Nt-ayN" secondAttribute="leading" id="HFG-BA-GSr"/>
                                     <constraint firstItem="v1s-eO-pzn" firstAttribute="leading" secondItem="nfE-l3-357" secondAttribute="leading" id="Jbf-hU-HAq"/>
-                                    <constraint firstItem="nfE-l3-357" firstAttribute="leading" secondItem="1xj-GD-ODW" secondAttribute="trailing" constant="10" id="JfJ-hR-Qi8"/>
+                                    <constraint firstItem="nfE-l3-357" firstAttribute="leading" secondItem="1xj-GD-ODW" secondAttribute="trailing" constant="2" id="JfJ-hR-Qi8"/>
                                     <constraint firstAttribute="bottom" secondItem="1xj-GD-ODW" secondAttribute="bottom" constant="24" id="SnB-if-LCS"/>
                                     <constraint firstItem="Yz4-Nt-ayN" firstAttribute="leading" secondItem="cAq-jU-fkf" secondAttribute="leadingMargin" id="SqC-nf-Zvd"/>
                                     <constraint firstItem="1xj-GD-ODW" firstAttribute="centerY" secondItem="v1s-eO-pzn" secondAttribute="centerY" constant="-11" id="aW1-la-ha6"/>
@@ -369,9 +370,14 @@
                                     <constraint firstItem="Yz4-Nt-ayN" firstAttribute="centerY" secondItem="1xj-GD-ODW" secondAttribute="centerY" constant="11" id="iCy-Ew-YHh"/>
                                     <constraint firstItem="v1s-eO-pzn" firstAttribute="top" secondItem="nfE-l3-357" secondAttribute="top" id="j5g-8I-ubh"/>
                                     <constraint firstItem="v1s-eO-pzn" firstAttribute="trailing" secondItem="nfE-l3-357" secondAttribute="trailing" id="oKx-Z0-r93"/>
-                                    <constraint firstItem="1xj-GD-ODW" firstAttribute="leading" secondItem="cAq-jU-fkf" secondAttribute="leading" constant="15" id="x32-sd-QjY"/>
+                                    <constraint firstItem="1xj-GD-ODW" firstAttribute="leading" secondItem="cAq-jU-fkf" secondAttribute="leading" constant="10" id="x32-sd-QjY"/>
                                     <constraint firstItem="1xj-GD-ODW" firstAttribute="top" secondItem="cAq-jU-fkf" secondAttribute="top" constant="2" id="z6h-ec-0EH"/>
                                 </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="x32-sd-QjY"/>
+                                    </mask>
+                                </variation>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hl9-97-H4F">
                                 <rect key="frame" x="240" y="142" width="120" height="120"/>
